--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "ethers": "^5.6.8",
     "ipfs-http-client": "^57.0.1",
     "next": "12.1.6",
     "react": "18.1.0",
